tests/errors/semantics/unsigned_cannot_be_negated.odl
main :: () -> void  {
    x := 1u8;
    -x;
};